--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>How to Log Into Your Yahoo Mail Account</title>
   <link rel="stylesheet" href="style.css" />
+  <meta name="msvalidate.01" content="1DC1D148FE9C6DC15E7FA02C6567157F" />
 </head>
 <body>
   <div class="container">
